# pantograph_automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
arduino/: platformio.ini
arduino/include/: config.h  control.hpp  encoder.hpp  joint.hpp  law.hpp  main.h  ring_buffer.hpp  states.hpp  stepper.hpp
arduino/lib/RealtimeStepper/: library.json
arduino/lib/RealtimeStepper/include/: control.hpp
arduino/lib/RealtimeStepper/src/: RealtimeStepper.cpp
arduino/src/: main.cpp
examples/: demo_11-14-2025.py
src/: debug.py  serial_spec.hpp
src/5bar_ui/: main.py
src/pantograph_control/: __init__.py  camera.py  drivers.py  ik.py  kinematics.py  macros.py  mechanics.py  pantograph.py  serial.py  serial_interface.py  task.py  tasks.py  trajectory.py
src/pantograph_ui/: CalibrateWindow.ui  MainWindow.ui  ManualWindow.ui  main.py  ui_calibrate_window.py  ui_main_window.py  ui_manual_window.py
tests/: test_camera.py  test_drivers.py  test_ik.py  test_kinematics.py  test_macros.py
