[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pantograph_control"
version = "0.0.1"
authors = [
  { name="David Alexander", email="dmalexa5@ncsu.edu" },
]
description = "Control system for pentagraph-style dynamics"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pyside6>=6.10",
    "opencv-python>=4.12.0"
] 
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE.txt"]

[project.urls]
Homepage = "https://github.com/Callus-Transfer-Group-C/pantograph_control"
Issues = "https://github.com/Callus-Transfer-Group-C/pantograph_control/issues"

[project.optional-dependencies]
dev = [
   "pytest"
]